@@ -5,7 +5,8 @@ Changelog
 1.0b34 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Supervisor: Assert that a Program should get to state "RUNNING" within
+  ``startsecs`` after restarting, instead of only waiting for ``startsecs``.
 
 
 1.0b33 (2015-01-28)
